--- a/config.json
+++ b/config.json
@@ -10,6 +10,54 @@
   ],
   "privacyPolicyUrl": "https://demokatalog.app/privacy",
   "orderEndpoint": "https://example.com/api/order",
+  "homeBanners": [
+    {
+      "id": "promo-first",
+      "style": "promo",
+      "kicker": "Спецпредложение",
+      "title": "Промокод ПЕРВЫЙ",
+      "text": "Скидка 10% на первый заказ для новых клиентов. Применяется в корзине после активации.",
+      "cta": "Активировать в корзине"
+    },
+    {
+      "id": "sales-offer",
+      "style": "sales",
+      "kicker": "Продающий оффер",
+      "title": "Каталог, корзина и оплата в Telegram",
+      "text": "Запусти продажи в mini app без сайта: клиент выбирает товар, оформляет заказ и оплачивает в одном окне.",
+      "cta": "Запустить под ключ"
+    }
+  ],
+  "homeArticles": [
+    {
+      "id": "about",
+      "kicker": "О продукте",
+      "title": "Что такое DEMOKATALOG",
+      "text": "Готовый mini app для запуска продаж в Telegram за короткий срок.",
+      "screen": "about"
+    },
+    {
+      "id": "production",
+      "kicker": "Механика",
+      "title": "Как работает воронка",
+      "text": "Каталог, карточка, корзина, оформление, оплата и уведомления в боте.",
+      "screen": "production"
+    },
+    {
+      "id": "payment",
+      "kicker": "Оплата",
+      "title": "Кассы и интеграции",
+      "text": "Telegram Payments, провайдеры, промокоды, сбор контактов и Telegram ID.",
+      "screen": "payment"
+    },
+    {
+      "id": "contacts",
+      "kicker": "Запуск",
+      "title": "Внедрение под ключ",
+      "text": "Настраиваем структуру, визуал и логику под нишу и бренд.",
+      "screen": "contacts"
+    }
+  ],
   "aboutText": "<div class=\"about-sections\"><div class=\"about-section\"><div class=\"about-heading\">DEMOKATALOG — витрина продаж в Telegram</div><div class=\"about-lead\">Это не просто шаблон, а готовый продукт, который превращает Telegram в удобный магазин: клиент листает каталог, добавляет товары в корзину и оформляет заказ в одном окне.</div><div class=\"about-lead\">Решение подходит для fashion, техники, аксессуаров, косметики и любых проектов, где важны скорость запуска, современный интерфейс и понятная логика покупки.</div></div><div class=\"about-section\"><div class=\"about-heading\">Почему это работает</div><ul class=\"about-list\"><li>Минимум шагов до покупки: меньше отказов и выше конверсия.</li><li>Интерфейс уровня мобильного приложения прямо в Telegram.</li><li>Гибкая кастомизация под бренд, аудиторию и ассортимент.</li><li>Готовая база для развития: CRM, аналитика, админка, автоворонки.</li></ul></div><div class=\"about-section\"><div class=\"about-heading\">Что получает клиент</div><ul class=\"about-list\"><li>Быстрый поиск и фильтрация по каталогу.</li><li>Избранное и история для повторных покупок.</li><li>Удобное оформление с доставкой/самовывозом.</li><li>Оплата внутри привычного Telegram-сценария.</li></ul></div></div>",
   "paymentText": "<div class=\"section-title\">Оплата, безопасность и условия</div><p>Оплата реализуется через Telegram Payments с подключением вашего провайдера или кассы. Это дает быстрый старт и прозрачную схему обработки заказов.</p><p>На этапе оформления фиксируются ключевые данные: тип получения (самовывоз/доставка), адрес, email, телефон и Telegram ID. Это позволяет менеджеру быстро подтверждать заказ и вести клиента без потерь.</p><p>Поддерживаются промокоды, скидочные сценарии и правила для первого заказа. Логика легко расширяется под бонусы, персональные предложения и акции по сегментам аудитории.</p><p>Следующий этап развития: автоматическая передача статусов заказа, интеграция с CRM/складом и финансовая аналитика по каналам продаж.</p>",
   "contactsText": "Связь и запуск\nМенеджер проекта: @XPERCHIKX\nTelegram: https://t.me/XPERCHIKX\nEmail: hello@demokatalog.app\nВремя ответа: ежедневно с 10:00 до 22:00 (МСК)\n\nЧто можно обсудить сразу:\n• Нишу и структуру каталога\n• Логику корзины/оформления\n• Подключение оплаты и интеграций\n• Сроки запуска и дорожную карту развития",
