--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ WEBHOOK_SECRET_ENC=
 
 # Optional CI / GitHub
 GITHUB_TOKEN=
+
+# SaaS backend (multi-tenant)
+PORT=3000
+DEFAULT_STORE_ID=DEMO01
+DEFAULT_ADMIN_EMAIL=admin@demokatalog.app
+DEFAULT_ADMIN_PASSWORD=Admin12345
