Set default SaaS storeId to 111111

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,6 @@ GITHUB_TOKEN=
 
 # SaaS backend (multi-tenant)
 PORT=3000
-DEFAULT_STORE_ID=DEMO01
+DEFAULT_STORE_ID=111111
 DEFAULT_ADMIN_EMAIL=admin@demokatalog.app
 DEFAULT_ADMIN_PASSWORD=Admin12345
