Add owner store provisioning and client activation by storeId + inviteCode

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,4 @@ PORT=3000
 DEFAULT_STORE_ID=111111
 DEFAULT_ADMIN_EMAIL=admin@demokatalog.app
 DEFAULT_ADMIN_PASSWORD=Admin12345
+OWNER_API_KEY=change_me_owner_key
