Add owner CLI to create storeId and invite code

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,4 @@ DEFAULT_STORE_ID=111111
 DEFAULT_ADMIN_EMAIL=admin@demokatalog.app
 DEFAULT_ADMIN_PASSWORD=Admin12345
 OWNER_API_KEY=change_me_owner_key
+SAAS_API_BASE=http://127.0.0.1:3000/api
