--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "create:store": "node scripts/create-store.mjs"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
