--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,4 @@ DEFAULT_ADMIN_EMAIL=admin@demokatalog.app
 DEFAULT_ADMIN_PASSWORD=Admin12345
 OWNER_API_KEY=change_me_owner_key
 SAAS_API_BASE=http://127.0.0.1:3000/api
+ALLOWED_ORIGINS=https://x3percik5x.github.io,https://t.me
