chore: checkpoint before saas quality audit

--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,6 @@ DEFAULT_STORE_ID=111111
 DEFAULT_ADMIN_EMAIL=admin@demokatalog.app
 DEFAULT_ADMIN_PASSWORD=Admin12345
 OWNER_API_KEY=change_me_owner_key
+BOT_TOKEN_SECRET=change_me_very_long_random_secret
 SAAS_API_BASE=http://127.0.0.1:3000/api
 ALLOWED_ORIGINS=https://x3percik5x.github.io,https://t.me
