--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "create:store": "node scripts/create-store.mjs"
+    "create:store": "node scripts/create-store.mjs",
+    "test:smoke:multitenant": "node scripts/smoke-multitenant.mjs"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
